[gd_scene load_steps=4 format=2]

[ext_resource path="res://img/bitfont.fnt" type="BitmapFont" id=1]
[ext_resource path="res://script/Log.gd" type="Script" id=2]
[ext_resource path="res://script/Main.gd" type="Script" id=3]

[node name="Root" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )

[node name="BG" type="ColorRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )

[node name="LogContainer" type="VBoxContainer" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 20.0
margin_bottom = -20.0
grow_vertical = 0
custom_constants/separation = 1
script = ExtResource( 2 )

[node name="Label19" type="Label" parent="LogContainer"]
margin_bottom = 8.0
custom_fonts/font = ExtResource( 1 )

[node name="Label18" type="Label" parent="LogContainer"]
margin_top = 9.0
margin_bottom = 17.0
custom_fonts/font = ExtResource( 1 )

[node name="Label17" type="Label" parent="LogContainer"]
margin_top = 18.0
margin_bottom = 26.0
custom_fonts/font = ExtResource( 1 )

[node name="Label16" type="Label" parent="LogContainer"]
margin_top = 27.0
margin_bottom = 35.0
custom_fonts/font = ExtResource( 1 )

[node name="Label15" type="Label" parent="LogContainer"]
margin_top = 36.0
margin_bottom = 44.0
custom_fonts/font = ExtResource( 1 )

[node name="Label14" type="Label" parent="LogContainer"]
margin_top = 45.0
margin_bottom = 53.0
custom_fonts/font = ExtResource( 1 )

[node name="Label13" type="Label" parent="LogContainer"]
margin_top = 54.0
margin_bottom = 62.0
custom_fonts/font = ExtResource( 1 )

[node name="Label12" type="Label" parent="LogContainer"]
margin_top = 63.0
margin_bottom = 71.0
custom_fonts/font = ExtResource( 1 )

[node name="Label11" type="Label" parent="LogContainer"]
margin_top = 72.0
margin_bottom = 80.0
custom_fonts/font = ExtResource( 1 )

[node name="Label10" type="Label" parent="LogContainer"]
margin_top = 81.0
margin_bottom = 89.0
custom_fonts/font = ExtResource( 1 )

[node name="Label9" type="Label" parent="LogContainer"]
margin_top = 90.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 1 )

[node name="Label8" type="Label" parent="LogContainer"]
margin_top = 99.0
margin_bottom = 107.0
custom_fonts/font = ExtResource( 1 )

[node name="Label7" type="Label" parent="LogContainer"]
margin_top = 108.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 1 )

[node name="Label6" type="Label" parent="LogContainer"]
margin_top = 117.0
margin_bottom = 125.0
custom_fonts/font = ExtResource( 1 )

[node name="Label5" type="Label" parent="LogContainer"]
margin_top = 126.0
margin_bottom = 134.0
custom_fonts/font = ExtResource( 1 )

[node name="Label4" type="Label" parent="LogContainer"]
margin_top = 135.0
margin_bottom = 143.0
custom_fonts/font = ExtResource( 1 )

[node name="Label3" type="Label" parent="LogContainer"]
margin_top = 144.0
margin_bottom = 152.0
custom_fonts/font = ExtResource( 1 )

[node name="Label2" type="Label" parent="LogContainer"]
margin_top = 153.0
margin_bottom = 161.0
custom_fonts/font = ExtResource( 1 )

[node name="Label1" type="Label" parent="LogContainer"]
margin_top = 162.0
margin_bottom = 170.0
custom_fonts/font = ExtResource( 1 )

[node name="Label0" type="Label" parent="LogContainer"]
margin_top = 171.0
margin_bottom = 179.0
custom_fonts/font = ExtResource( 1 )
